# segment

./: .gitignore  README.md  porosity_app.py  pyproject.toml  segment.py  streamlit_app.py
