[project]
name = "code"
version = "0.1.0"
description = "Venv for embedding and clustering"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "configargparse>=1.7.1",
    "gputil>=1.4.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pyyaml>=6.0.2",
    "tqdm>=4.67.1",
    "wandb>=0.21.1",
    "opencv-python",
    "Pillow",
    "dash",
    "dash-bootstrap-components",
    "plotly",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]