[project]
name = "code"
version = "0.1.0"
description = "Venv for embedding and clustering"
readme = "README.md"
requires-python = ">=3.12, <3.13"  
  dependencies = [
      "configargparse>=1.7.1",
      "gputil>=1.4.0",
      "matplotlib>=3.10.5",
      "numpy>=2.3.2",
      "pandas>=2.3.1",
      "pillow>=11.3.0",
      "pyyaml>=6.0.2",
      "tqdm>=4.67.1",
      "wandb>=0.21.1",
      "opencv-python",
      "Pillow",
      "dash",
      "dash-bootstrap-components",
      "plotly",
      "streamlit==1.40.0",
      "streamlit-drawable-canvas>=0.9.3",
      "torch<=2.2.2",
      "pytesseract>=0.3.13",
]

